tests/ui/ferrocene/compiler-arguments/upper_c_opt-level/upper_c_opt-level_invalid.rs
//@ check-fail
//@ compile-flags: -Copt-level=invalid
//~? ERROR level needs to be

fn main() {}

// ferrocene-annotations: um_rustc_C_opt_level
